fixed some stuff on mobile

--- a/lit.css
+++ b/lit.css
@@ -122,6 +122,7 @@ a:hover {
     cursor: pointer;
     font-size: 12px;
     transition: .2s;
+    margin: 0 0 1em;
 }
 
 .btn:hover {
